Added math endpoints
